# protobug

./: .cspell.config.yml  .editorconfig  .release-plz.toml  .taplo.toml  Cargo.toml  README.md  a.hex  a.json  flake.nix  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-reviewer.yml  dependabot.yml  deploy.yml  release.yml
protobug/: CHANGELOG.md  Cargo.toml
protobug/src/: decode.rs  enum_edit.rs  error.rs  inspector.rs  json.rs  lib.rs  line_wrap.rs  main.rs  message.rs  schema.rs  selection.rs  tui.rs  validate.rs
protobug/src/edit/: mod.rs  tests.rs
protobug/src/edit/snapshots/: protobug__edit__tests__edit_in_place_preserves_multiple_base64_encoding.snap  protobug__edit__tests__edit_multiple_base64_to_json_lines_match_snapshot.snap  protobug__edit__tests__edit_multiple_hex_lines_match_snapshot.snap  protobug__edit__tests__filtered_edit_bytes_match_snapshot.snap  protobug__edit__tests__json_filter_matches_snapshot.snap
protobug/src/inspect/: mod.rs  tests.rs
protobug/src/inspect/snapshots/: protobug__inspect__tests__canonical_json_matches_snapshot.snap
protobug/src/inspector/: decode.rs  enums.rs  json.rs  mod.rs  schema.rs  tests.rs
protobug/src/snapshots/: protobug__inspector__tests__edit_in_place_preserves_hex_encoding.snap  protobug__inspector__tests__edit_in_place_preserves_json_encoding.snap  protobug__tui__tests__render_matches_default_layout.snap  protobug__tui__tests__render_matches_error_layout.snap
protobug/src/tui/: mod.rs  render.rs  tests.rs
protobug/src/tui/snapshots/: protobug__tui__tests__render_matches_default_layout.snap
protogen/: Cargo.toml  build.rs
protogen/proto/: system-event.proto  trace-bundle.proto
protogen/samples/: system-event-multi.hex  system-event-multi.hex.orig  system-event.base64  system-event.hex  trace-bundle-http.base64  trace-bundle-http.hex  trace-bundle-queue.base64  trace-bundle-queue.hex  trace-replay-request.base64  trace-replay-request.hex
protogen/src/: lib.rs  main.rs
