[workspace]
resolver = "2"
members = ["./protobug", "./protogen"]

[workspace.package]
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["protobuf", "debugger", "terminal", "cli", "protobug"]
categories = ["development-tools::debugging"]
repository = "https://github.com/robjtede/protobug"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
base64 = "0.22"
camino = "1"
clap = { version = "4" }
crossterm = "0.29"
error-stack = "0.7"
hex = "0.4"
protobuf = "3"
protobuf-codegen = "3"
ratatui = "0.30"

[workspace.lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"
