[workspace]
resolver = "2"
members = ["./protobug", "./protogen"]

[workspace.package]
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["protobuf", "debugger", "terminal", "cli", "protobug"]
categories = ["development-tools::debugging"]
repository = "https://github.com/x52dev/protobug"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
camino = "1"
clap = "4"
crossterm = "0.29"
derive_more = "2"
error-stack = "0.7"
hex = "0.4"
indoc = "2"
insta = "1.47.2"
jaq-core = "3"
jaq-json = "2"
jaq-std = "3"
pretty_assertions = "1"
protobuf = "3"
protobuf-codegen = "3"
protobuf-json-mapping = "3"
protobuf-parse = "3"
protogen = { path = "./protogen" }
ratatui = "0.30"
serde_json = "1"
tempfile = "3"
tui-textarea = { package = "tui-textarea-2", version = "0.10" }

[workspace.lints.rust]
future_incompatible = "deny"
nonstandard_style = "deny"
rust_2018_idioms = "deny"
