[package]
name = "protobug"
version = "0.1.1"
authors.workspace = true
description = "Interactive terminal debugger for protobuf payloads"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
base64 = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
derive_more = { version = "2", features = ["display", "error"] }
error-stack = { workspace = true, features = ["anyhow"] }
hex = { workspace = true }
protobuf = { workspace = true }
protobuf-json-mapping = "3"
protobuf-parse = "3"
ratatui = { workspace = true }
serde_json = "1"
tui-textarea = { package = "tui-textarea-2", version = "0.10.2" }

[dev-dependencies]
indoc = "2"
insta = "1.46.3"
pretty_assertions = "1"
protogen = { path = "../protogen" }
tempfile = "3"

[lints]
workspace = true
