[package]
name = "protobug"
version = "0.2.1"
description = "Interactive terminal debugger for protobuf payloads"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
error-stack = { workspace = true, features = ["anyhow"] }
hex = { workspace = true }
jaq-core = { workspace = true }
jaq-json = { workspace = true, features = ["serde"] }
jaq-std = { workspace = true }
protobuf = { workspace = true }
protobuf-json-mapping = { workspace = true }
protobuf-parse = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }
tui-textarea = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
insta = { workspace = true }
pretty_assertions = { workspace = true }
protogen = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
