[package]
name = "protogen"
description = "Sample protobuf fixture generator for protobug"
publish = false
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[package.metadata.cargo-machete]
ignored = [
  "protobuf-codegen", # used in build script
]

[dependencies]
base64.workspace = true
hex.workspace = true
protobuf.workspace = true

[build-dependencies]
protobuf.workspace = true
protobuf-codegen.workspace = true

[lints]
workspace = true
